# baize-kit

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
crates/baizekit/: Cargo.toml
crates/baizekit-api/: Cargo.toml
crates/baizekit-api-build/: Cargo.toml
crates/baizekit-api-build/src/: builder.rs  generator.rs  handler.rs  lib.rs
crates/baizekit-api/src/: lib.rs
crates/baizekit-api/src/component/: axum.rs
crates/baizekit-api/src/extract/: auth_principal.rs  mod.rs  principal.rs
crates/baizekit-api/src/openapi/: mod.rs
crates/baizekit-api/src/request/: page.rs
crates/baizekit-api/src/response/: err.rs  mod.rs  msg.rs  ok.rs
crates/baizekit-app/: Cargo.toml
crates/baizekit-app/src/: application.rs  command.rs  component.rs  component_factory.rs  error.rs  lib.rs  signal.rs  version.rs
crates/baizekit-cli/: Cargo.toml
crates/baizekit-cli/src/: main.rs
crates/baizekit-cli/src/cmd/: mod.rs
crates/baizekit-cli/src/cmd/db/: mod.rs  parse.rs
crates/baizekit-cli/src/cmd/generate/: mod.rs
crates/baizekit-cli/src/config/: mod.rs
crates/baizekit-cli/src/utils/: mod_utils.rs  workspace.rs
crates/baizekit-cli/src/utils/git/: clone_tool.rs  mod.rs
crates/baizekit-derive/: Cargo.toml
crates/baizekit-derive/src/: derive_with.rs  lib.rs
crates/baizekit-gen/: Cargo.toml
crates/baizekit-gen/src/: cli.rs  lib.rs  main.rs  utils.rs  workspace.rs
crates/baizekit-gen/src/cmd/: init.rs  mod.rs  new.rs
crates/baizekit-gen/src/cmd/generate/: crates.rs  entity.rs  mod.rs  server.rs  service.rs
crates/baizekit-gen/src/config/: mod.rs
crates/baizekit-gen/src/domain/: mod.rs
crates/baizekit-gen/src/domain/template/: entity.rs.tera  repository.rs.tera
crates/baizekit-gen/src/git/: gitconfig.rs  mod.rs  utils.rs
crates/baizekit-gen/src/repository/: mod.rs
crates/baizekit-gen/src/repository/template/: repository.rs.tera
crates/baizekit-gen/src/utils/: mod.rs
crates/baizekit-gen/src/utils/git/: gitconfig.rs  utils.rs
crates/baizekit-kafka/: Cargo.toml
crates/baizekit-kafka/src/: config.rs  error.rs  lib.rs  sync_producer.rs
crates/baizekit-kafka/src/config/: admin.rs  consumer.rs  mod.rs  producer.rs
crates/baizekit-log/: Cargo.toml
crates/baizekit-log/src/: component.rs  config.rs  format.rs  lib.rs  timer.rs
crates/baizekit-redis/: Cargo.toml
crates/baizekit-redis/src/: client.rs  cluster.rs  lib.rs
crates/baizekit-seaorm/: Cargo.toml  build.rs
crates/baizekit-seaorm/src/: cfg.rs  cli.rs  component.rs  lib.rs  migration.rs
crates/baizekit-seaorm/src/connection/: cfg.rs  mod.rs  pg_pool.rs
crates/baizekit-seaorm/src/curd/: derive_impl.rs  derive_options.rs  mod.rs  traits.rs  transaction.rs
crates/baizekit-seaorm/src/curd/derive/: derive_impl.rs  derive_options.rs  mod.rs
crates/baizekit-seaorm/src/partition/: adapter.rs  mod.rs  postgres.rs
crates/baizekit-seaorm/src/repository/: a.rs  find.rs  mod.rs  postgres.rs  search.rs  upsert.rs
crates/baizekit-seaorm/tests/: partition.rs  test_get_connection.rs
crates/baizekit-serde/: Cargo.toml
crates/baizekit-serde/src/: datetime.rs  dec.rs  lib.rs  num.rs  str.rs
crates/baizekit/examples/: command.rs  main.rs
crates/baizekit/src/: lib.rs
