[workspace]
members = [
    "crates/baizekit-*",
]
resolver = "3"


[workspace.package]
version = "0.1.22"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/1e128/baize-kit"
repository = "https://github.com/1e128/baize-kit.git"
license = "MIT"
readme = "README.md"
keywords = ["api", "log", "seaorm", "serde", "toolkit"]
categories = ["database", "web-programming"]
