[workspace]
members = [
    "crates/baizekit",
    "crates/baizekit-*",
]
resolver = "3"


[workspace.package]
version = "0.1.26"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/1e128/baize-kit"
repository = "https://github.com/1e128/baize-kit.git"
license = "MIT"
readme = "README.md"
keywords = ["api", "log", "seaorm", "serde", "toolkit"]
categories = ["database", "web-programming"]

[workspace.dependencies]
baizekit-api = "0.1.26"
baizekit-app = "0.1.25"
baizekit-derive = "0.1.25"
baizekit-kafka = "0.1.25"
baizekit-log = "0.1.25"
baizekit-redis = "0.1.25"
baizekit-seaorm = "0.1.25"
baizekit-serde = "0.1.25"

async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.4"

chrono = "0.4.41"
clap = "4.5.41"
config = "0.15.13"

derive_more = "2.0.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
rust_decimal = "1.37.2"

sea-orm = "1.1.13"
serde = "1.0.219"
serde_json = "1.0.141"
serde_with = "3.14.0"
strum = "0.27.2"
snafu = "0.8.6"

tokio = "1.46.1"
tokio-util = "0.7.15"
tracing = "0.1.41"
tower-http = "0.6.6"
toml = "0.9.2"

utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.0"

# derive macro
darling = "0.20.11"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
