[package]
name = "baizekit-api-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "API build"

[dependencies]
axum = { version = "0.8.4" }
baizekit-derive = { version = "0.1.22" }
globset = "0.4.16"
prettyplease = { version = "0.2.32" }
quote = { version = "1.0.40" }
syn = { version = "2.0.104", features = ["parsing", "full"] }
walkdir = { version = "2.5.0" }

