[package]
name = "baizekit-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "API ToolKit"

[dependencies]
axum = { workspace = true }
baizekit-app = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors", "request-id"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum", "cache"] }

# http-build
baizekit-derive = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true, features = ["parsing", "full"] }
globset = { version = "0.4.16", optional = true }
prettyplease = { version = "0.2.35", optional = true }
walkdir = { version = "2.5.0", optional = true }

[features]
http-build = [
    "baizekit-derive",
    "globset",
    "prettyplease",
    "quote",
    "syn",
    "walkdir"
]