[package]
name = "baizekit-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Derive ToolKit"

[lib]
proc-macro = true

[dependencies]
baizekit-seaorm = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

