[package]
name = "baizekit-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BaizeKit Generator"

[dependencies]
clap = { version = "4.5.40", features = ["env", "derive"] }
dotenvy = { version = "0.15.0" }
tera = { version = "1.20.0" }
convert_case = "0.8.0"
