[package]
name = "baizekit-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BaizeKit Generator"

[dependencies]
# git
auth-git2 = { version = "0.5.8" }
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
gix-config = { version = "0.45.0" }

# others
anyhow = { version = "1.0.98" }
cargo-generate = { version = "0.23.4", features = ["default"] }
cargo_metadata = { version = "0.21.0" }
clap = { version = "4.5.40", features = ["env", "derive"] }
dotenvy = { version = "0.15.0" }
home = { version = "0.5.11" }
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2" }
tempfile = { version = "3.19.0" }
env_logger = "0.11.8"
