[package]
name = "baizekit-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BaizeKit Generator"

[dependencies]
# git
auth-git2 = { version = "0.5.8" }
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
gix-config = { version = "0.45.0" }

# others
anstyle = { version = "1.0.11" }
anyhow = { version = "1.0.98" }
cargo-generate = { version = "0.23.4", features = ["default"] }
cargo_metadata = { version = "0.21.0" }
cargo-util-schemas = { version = "0.8.1" }
clap = { workspace = true, features = ["env", "derive", "color"] }
dotenvy = { workspace = true }
home = { version = "0.5.11" }
log = { workspace = true }
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tempfile = { version = "3.19.0" }
env_logger = "0.11.8"
glob = "0.3.2"
