[package]
name = "baizekit-kafka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description = "Kafka ToolKit"


[dependencies]
rdkafka = { version = "0.38.0" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }


[features]
default = []
cmake-build = ["rdkafka/cmake-build"]
