[package]
name = "baizekit-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Tracing Log ToolKit"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.12.0", features = ["default"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"
serde_test = "1.0.177"
