[package]
name = "baizekit-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Tracing Log ToolKit"

[dependencies]
baizekit-app = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["default"] }
tracing = { workspace = true }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
