[package]
name = "baizekit-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Redis ToolKit"

[dependencies]
redis = { version = "0.29.2", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
cluster = ["redis/cluster"]
cluster_sync = [
    "cluster",
    "redis/cluster-async"
]