[package]
name = "baizekit-seaorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "SeaORM ToolKit"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
log = { version = "0.4.27", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-cli = "1.1.12"
sea-orm-migration = "1.1.12"
tokio = { version = "1.45.1", features = ["sync"] }