[package]
name = "baizekit-seaorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "SeaORM ToolKit"

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5.40", optional = true, features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
dotenvy = "0.15.7"
futures-util = { version = "0.3.31" }
log = { version = "0.4.27", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-cli = { version = "1.1.12", optional = true }
sea-orm-migration = { version = "1.1.12", optional = true }
sqlx = { version = "0.8.6" }
tokio = { version = "1.45.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
dotenvy = "0.15.7"


[features]
partition = []
migration = [
    "clap",
    "sea-orm-cli",
    "sea-orm-migration"
]