[package]
name = "baizekit-seaorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "SeaORM ToolKit"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
baizekit-app = { workspace = true }
dotenvy = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
futures-util = { workspace = true }
log = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

# migration or derive
clap = { workspace = true, optional = true, features = ["derive"] }
darling = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
sea-orm-cli = { version = "1.1.12", optional = true }
sea-orm-migration = { version = "1.1.12", optional = true }
syn = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }


[features]
partition = []
migration = [
    "clap",
    "dotenvy",
    "sea-orm-cli",
    "sea-orm-migration"
]
derive = ["darling", "syn", "proc-macro2", "derive_more/from"]