[package]
name = "baizekit-serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
