[package]
name = "baizekit-serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Serde ToolKit"


[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1.0.140" }
serde_test = "1.0"