[package]
name = "baizekit-serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Serde ToolKit"


[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
serde_test = "1.0"